# ml-practice-6

./: .gitignore  Dockerfile  Dockerfile.frontend  README.md  demo.py  docker-compose.yml  main.py  pyproject.toml
src/api/: api.py  models.py
src/model/: config.py  mlflow_utils.py  model.joblib  predict.py  preprocess.py  train.py
