[project]
name = "ml-practice-6"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135.3",
    "kagglehub>=1.0.0",
    "mlflow>=2.22.4",
    "numpy>=2.4.4",
    "pandas<3",
    "scikit-learn>=1.8.0",
    "streamlit>=1.56.0",
    "uvicorn>=0.44.0",
    "xgboost-cpu>=3.2.0",
]
